--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
 </head>
 <body>
     <main>
-
-        <div><input type="text" name="temp" class="input-cls  input-darkmode" /><input type="button" class="btn-compute" value="Generate" /></div>
-
+        <div class="main-container">
+            <div>
+                <div class="guess">Guesses: </div>
+                <div class="sys-number"> </div>
+                <div class="msg-cls"> </div>
+            </div>
+        </div>
+        <input type="button" class="btn-compute" value="Start" />
     </main>
 </body>
 </html>
