--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <main>
         <div class="main-container">
             <div>
-                <div class="guess">Guesses: </div>
-                <div class="sys-number"> </div>
-                <div class="msg-cls"> </div>
+                <div class="guess"><input type="text" name="guess" class="input-cls  input-darkmode" placeholder="guesses"/> </div>
+                <div class="sys-number"> 0</div>
+                <div class="msg-cls">You have four chances, please input number 1-50!</div>
             </div>
         </div>
         <input type="button" class="btn-compute" value="Start" />
