--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="My new cool project">
     <meta name="keywords" content="Html,CSS,SEO,web,web development">
     <link rel="shortcut icon" href="assets/favicon.png?v=2" type="image/x-icon">
-    <title>Assignment</title>
+    <title>Guess Game</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
