--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="main-container">
             <div>
-                <div class="guess"><input type="text" name="guess" class="input-cls  input-darkmode" placeholder="guesses"/> </div>
+                <div class="guess"><input type="text" name="guess" class="input-cls  input-darkmode" placeholder="Guesses"/> </div>
                 <div class="sys-number"> 0</div>
                 <div class="msg-cls">You have four chances, please input number 1-50!</div>
             </div>
